# rustling-coverage-study

./: README.md  main.py  pyproject.toml
cpp/: Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  main.cpp
rust/todo_app/src/: main.rs  tasks.rs  ui.rs
